--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=ksr
+spring.application.name=ksra
+
+# Base URL of the target Schema Registry
+schema.registry.url=http://localhost:8081
