--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.fattahpour</groupId>
         <artifactId>ksra</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <name>ksra</name>
 	<description>Kafka Schema Registry Analytics (KSRA)</description>
 	<url/>
