--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
                 <dependency>
                         <groupId>com.squareup.okhttp3</groupId>
                         <artifactId>mockwebserver</artifactId>
-                        <scope>test</scope>
+						<version>4.12.0</version>
+						<scope>test</scope>
                 </dependency>
         </dependencies>
 
